fixed whitespace management in link.html and project covers

--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -1,3 +1,4 @@
+
 @use "base";
 .projects {
     &-card {
@@ -8,16 +9,17 @@
         img, .text-scramble {
             width: 100%;
             max-height: 450px;
-            border-radius: 1rem;
-            transition: all 0.3s ease;
+            transition: all 0.5s ease;
         }
         img {
+            padding: 0.25rem;
             object-fit: fit;
             object-position: center;
-            filter: brightness(0.5) grayscale(1);
+            filter: brightness(0.8) grayscale(1);
             
             &:has(+ .text-scramble:hover) {
-                filter: brightness(0.2) grayscale(1);
+                padding: 0.5rem;
+                filter: brightness(1) grayscale(0);
             }
         }
         .text-scramble {
@@ -30,8 +32,10 @@
             align-items: center;
             justify-content: center;
             pointer-events: auto;
+            backdrop-filter: blur(10px);
+
             &:hover {
-                backdrop-filter: blur(10px);
+                backdrop-filter: blur(0px);
             }
         }
     }
